补一组测试数据

--- a/projects/trans/src/test/java/org/batfish/trans/BUILD.bazel
+++ b/projects/trans/src/test/java/org/batfish/trans/BUILD.bazel
@@ -9,6 +9,7 @@ junit_tests(
         "//projects/trans/src/test/resources/org/batfish/grammar/cisco/testconfigs",
         "//projects/trans/src/test/resources/org/batfish/grammar/juniper/testconfigs",
         "//projects/trans/src/test/resources/org/batfish/job/juniper",
+        "//projects/trans/src/test/resources/org/batfish/trans/filetrans",
         "//projects/trans/src/test/resources/org/batfish/trans/policytrans",
     ],
     deps = [
